--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 .Exp, .Edu {
     margin-top: 30px;
 }
-.CCB, .UBB, .HireWeb {
+.CCB, .UBB, .KONE{
     margin-bottom: 50px;
     background-color: white;
     font-size: 18px;
